# QMEAN

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  LICENSE.txt  NOTICE  README  README.txt  homebrew.patch  license.html  membrane.html  objects.inv  score_combination.html  search.html  statistical_potentials.html
_sources/: membrane.rst.txt  predicted_sequence_features.rst.txt
cmake_support/: FindEigen.cmake  FindOPENSTRUCTURE.cmake  FindPython.cmake  QMEAN2.cmake
data/: CMakeLists.txt
data/qmean/reference_values/: reference_tab_promod_scorer.txt
data/qmean/scorer/gmqe_scorer/: feature_groups.json
data/qmean/scorer/local_nn_scorer/: feature_groups.json
data/qmean/scorer/local_nn_scorer_cameo/: feature_groups.json
data/qmean/scorer/tree_generation/: train_and_test_tree.py  tree_data_extraction.py
django-website/website/: forms.py  local_settings.py  local_settings.py.example  qmean_server_config.py  run_qmean.py  run_qmean_task.py  settings.py  sge.py  task.py  urls.py  views.py
django-website/website/static/css/: style.css
django-website/website/static/js/: bio-pv.min.js
django-website/website/templates/: 404.html  500.html  base.html  contact.html  help.html  help_tips.html  home.html  references.html  results.html  results_base.html  results_completed.html  results_failed.html  results_running.html
django-website/website/templatetags/: tags.py
doc/: Makefile
doc/source/: CMakeLists.txt  chemtype.rst  conf.py  containers.rst  disco.rst  distance_constraints.rst  getting_started.rst  gmqe.rst  index.rst  license.rst  membrane.rst  predicted_sequence_features.rst  run_qmean_scoring.rst  score_combination.rst  spherical_smoother.rst  statistical_potentials.rst
doc/source/example_scripts/: .local_scorer_example.py.swp  CMakeLists.txt  accpro_handler_example.py  assess_membrane_model_quality.py  assess_model_quality_example.py  cbeta_potential_example.py  chemtype_example.py  container_example.py  dcdata_computation_example.py  disco_example.py  gmqe_example.py  interaction_potential_example.py  local_scorer_example.py  membrane_example.py  packing_potential_example.py  psipred_handler_example.py  qmeandisco_example.py  regressor_training.py  reproduce_fig4_from_publication.py  smoother_example.py  ss_agreement_example.py  test_doctests.py  torsion_potential_example.py
doc/source/example_scripts/example_data/: 1crn.1.A.hhm  1crn_3szs_aln.fasta  1pvv.1.A.fasta  1v1v.1.A.fasta  2w37.1.A.fasta  3grf.1.A.fasta  3szs.2.A.hhm  4j32_A_msaln.fasta  4j32_A_seqres.fasta  4nf2.1.A.fasta  check_structures.py  fetch_pdb_structures.py  original_hhblits_alignment_local_scores.txt  shift_in_front_helix_four_local_scores.txt  shift_into_middle_local_scores.txt  shift_towards_cter_local_scores.txt  target_seq.fasta
doc/source/example_scripts/example_out/crambin_assessment/: global_scores.txt  local_scores.txt
doc/source/example_scripts/example_out/original_hhblits_alignment/: local_scores.txt
doc/source/example_scripts/example_out/shift_in_front_helix_four/: local_scores.txt
doc/source/example_scripts/example_out/shift_into_middle/: local_scores.txt
doc/source/example_scripts/example_out/shift_towards_cter/: local_scores.txt
docker/: Dockerfile  README.md  docker-entrypoint.sh  getACCAligns.pl  homology_sa.pl  predict_ss_sa.pl  run-qmeandisco.py  run_qmean.py
docker/qmean_qmeandisco_example/: README.md  out.json  query_hhblits_one.a3m  targets.fasta
docker/qmean_qmeandisco_example/my_workdir/0e5b599c5303c996e3a760708e8cd90a/: accpro_in  accpro_out  hhm100query_hhblits_cpu1_n1_premerge0.hhr  query_hhblits.fasta  query_hhblits.hhm
docker/qmean_qmeandisco_example/my_workdir/a225288f4fa08d5d9a27eb335bcc8866/: accpro_in  accpro_out  hhm100query_hhblits_cpu1_n1_premerge0.hhr  query_hhblits.a3m  query_hhblits.fasta  query_hhblits.hhm
docker/qmeanbrane_example/: README.md  out.json  targets.fasta
docker/qmeanbrane_example/my_workdir/2044234b0bd6d322ef6c15ab03394e61/: accpro_in  accpro_out  query_hhblits.a3m  query_hhblits.fasta  query_hhblits.hhm
pymod/: CMakeLists.txt  __init__.py  build_custom_potentials.py  conf.py  crap_checker.py  dc_data.py  export_base.cc  export_cb_packing.cc  export_cbeta.cc  export_clash.cc  export_disco.cc  export_distance_constraints.cc  export_extract_data_helper.cc  export_gmqe.cc  export_hbond.cc  export_interaction.cc  export_membrane.cc  export_packing.cc  export_reduced.cc  export_spherical_smoother.cc  export_ss_agreement.cc  export_torsion.cc  gmqe.py  mlp_regressor.py  mqa.py  mqa_membrane.py  mqa_membrane_hybrid.py  mqa_result.py  mqa_result_membrane.py  mqa_result_membrane_hybrid.py  pisces.py  predicted_sequence_features.py  reference_set.py  score_calculator.py  wrap_qmean.cc
scripts/: CMakeLists.txt  build_soluble_potentials.py  bump-version.py  cullpdb_pc20_res2.0_R0.25_d130206_chains4216  qmean.in  qmean_script.py
scripts/prepare_membrane_data/: OPMTMSegments.txt  chain_weights.csv  make_selection.py  opm_parser.py  resolu.idx
src/: CMakeLists.txt  atom_types.cc  atom_types.hh  cb_packing_potential.cc  cb_packing_potential.hh  cb_packing_statistics.cc  cb_packing_statistics.hh  cbeta_potential.cc  cbeta_potential.hh  cbeta_statistics.cc  cbeta_statistics.hh  clash_score.cc  clash_score.hh  disco.cc  disco.hh  distance_constraints.cc  distance_constraints.hh  extract_data_helper.cc  extract_data_helper.hh  float_histogram.hh  gmqe_scores.cc  gmqe_scores.hh  hbond_potential.cc  hbond_potential.hh  hbond_statistics.cc  hbond_statistics.hh  histogram.hh  index.hh  interaction_potential.cc  interaction_potential.hh  interaction_statistics.cc  interaction_statistics.hh  membrane.cc  membrane.hh  module_config.hh  multi_classifier.hh  packing_potential.cc  packing_potential.hh  packing_statistics.cc  packing_statistics.hh  (+21 more)
src/impl/: cb_packing_impl.cc  cb_packing_impl.hh  cbeta_impl.cc  cbeta_impl.hh  hbond_impl.cc  hbond_impl.hh  interaction_impl.cc  interaction_impl.hh  packing_impl.cc  packing_impl.hh  reduced_impl.cc  reduced_impl.hh  torsion_impl.cc  torsion_impl.hh
(+2 files in other folders)
